12.ingress-test/ingress-controller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # 노출될 NodePort 설정
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443  # 노출될 NodePort 설정
      protocol: TCP
