12.ingress-test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # 권장 방식으로 IngressClass 설정
  rules:
    - host: helloworld-v1.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloworld-v1
                port:
                  number: 80
    - host: helloworld-v2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloworld-v2
                port:
                  number: 80
